--- a/UserMaintenance/UserMaintenance/Strings.resx
+++ b/UserMaintenance/UserMaintenance/Strings.resx
@@ -121,6 +121,12 @@
     <value>Hozzáadás</value>
   </data>
   <data name="FullName" xml:space="preserve">
-    <value>Teljes név</value>
+    <value>Név:</value>
+  </data>
+  <data name="SaveFileTitle" xml:space="preserve">
+    <value>Mentés táblázatként</value>
+  </data>
+  <data name="WriteToFile" xml:space="preserve">
+    <value>Fájlba írás</value>
   </data>
 </root>
